--- a/ClientApp/src/styles/SignIn.module.scss
+++ b/ClientApp/src/styles/SignIn.module.scss
@@ -7,10 +7,6 @@
 
 .jediArchivesIntro {
   min-height: 100vh;
-  background-image: url(../images/JediArchiveLibrary.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,13 +17,16 @@
   animation: glow 2s infinite alternate;
   background-color: rgb(22, 69, 97);
   margin: 0;
-  padding: 9rem 6rem 9rem 6rem;
+  width: 270px;
+  height: 395px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   color: white;
   font-size: 2rem;
-  border: none;
-  padding: 10rem 2rem 10rem 2rem;
-  font-family: 'starwarsfont';
+  padding: 0rem 0.5rem 0rem 0.5rem;
+  text-align: center;
 }
 
 @keyframes glow {
@@ -40,6 +39,45 @@
 }
 
 .battlesButton:hover {
+  background-color: white;
+  color: black;
+}
+
+body {
+  margin: 0;
+  background-image: url(../images/JediArchiveLibrary.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'starwarsfont';
+}
+
+.battlesButtonSignIn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: glow 2s infinite alternate;
+  background-color: rgb(22, 69, 97);
+  width: 270px;
+  height: 395px;
+  text-align: center;
+  color: white;
+  font-size: 2rem;
+  border: none;
+  padding: 0rem 0.5rem 0rem 0.5rem;
+
+  button {
+    cursor: pointer;
+    padding: 1rem;
+    border-radius: 0.3rem;
+    margin: 0.5rem;
+    font-size: 1rem;
+    font-family: 'starwarsfont';
+  }
+}
+
+.battlesButtonSignIn:hover {
   background-color: white;
   color: black;
 }
