--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -9,4 +9,9 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-image: url(./images/JediArchiveLibrary.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'starwarsfont';
 }
