--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -6,12 +6,15 @@ html {
   height: 100%;
 }
 
+@font-face {
+  font-family: 'starwarsfont';
+  src: url('./fonts/Starjedi.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   min-height: 100%;
-  background-image: url(./images/JediArchiveLibrary.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   font-family: 'starwarsfont';
 }
