--- a/ClientApp/src/styles/Battles.module.scss
+++ b/ClientApp/src/styles/Battles.module.scss
@@ -32,14 +32,11 @@
   font-size: 20px;
 }
 
-// .wrap {
-//   // width: 30%;
-//   top: 50%;
-//   left: 50%;
-// }
+.wrap {
+  width: 370px;
+}
 
 .addButton {
-  // font-family: sans-serif;
   position: relative;
   border-width: 2px;
   border-style: solid;
@@ -122,12 +119,9 @@
 }
 
 .erasOptions {
-  p {
-    font-size: 1rem;
-  }
-  h1 {
-    margin: 0;
-    padding: 0;
+  h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -146,4 +140,22 @@
   text-align: center;
   padding: 1rem;
   font-size: 3rem;
+}
+
+.test {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+
+  p {
+    margin-right: 0.6rem;
+  }
+
+  select {
+    cursor: pointer;
+    padding: 0.2rem 0.1rem 0.2rem 0.1rem;
+    border: none;
+    font-size: 0.9rem;
+  }
 }
