--- a/ClientApp/src/styles/Battle.module.scss
+++ b/ClientApp/src/styles/Battle.module.scss
@@ -105,6 +105,11 @@ span {
   color: black;
 }
 
+.battleDescription {
+  border: solid 0.1rem black;
+  padding: 1rem;
+}
+
 .battleImagesShell {
   width: 350px;
   height: 250px;
