--- a/ClientApp/src/styles/CreateBattle.module.scss
+++ b/ClientApp/src/styles/CreateBattle.module.scss
@@ -1,11 +1,30 @@
-.erasOptions {
+.createBattle {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
+}
+
+.createBattle header {
+  color: white;
+}
+
+.createBattle h1 {
+  text-align: center;
+  padding: 1rem;
+  font-size: 3rem;
+}
+
+.createBattleContainer {
   border: solid silver;
   margin: 2rem 1rem 2rem 1rem;
   padding: 1rem 3rem 2rem 3rem;
   background-color: rgba(69, 177, 240, 0.8);
+
   nav {
     display: flex;
     margin: 1rem 0.5rem 1rem 0rem;
+
     i {
       margin-right: 0.5rem;
       color: black;
@@ -13,10 +32,37 @@
   }
 }
 
-.erasOptions nav > * + *::before {
+.createBattleContainer nav > * + *::before {
   content: '>';
   margin-right: 0.5rem;
   font-family: 'Inika', serif;
+}
+
+.createBattleContainer p {
+  margin-top: 1rem;
+}
+
+.formContainer p > p {
+  margin-bottom: 0.3rem;
+}
+
+.formInput {
+  display: flex;
+  flex-direction: column;
+
+  div {
+    margin: 0rem;
+    display: flex;
+    align-items: center;
+
+    label {
+      margin-left: 1rem;
+    }
+
+    input {
+      cursor: pointer;
+    }
+  }
 }
 
 .formInput input[type='text'],
@@ -28,10 +74,6 @@
   margin: 0.5rem 0;
 }
 
-.erasOptions p {
-  margin-top: 1rem;
-}
-
 .formInput input[type='text'],
 .formInput textarea {
   border: thin solid var(--purple-1);
@@ -39,59 +81,15 @@
   border-radius: 0.2rem;
 }
 
-.formInput {
-  display: flex;
-  flex-direction: column;
-  div {
-    margin: 0rem;
-    display: flex;
-    align-items: center;
-    label {
-      margin-left: 1rem;
-    }
-    input {
-      cursor: pointer;
-    }
-  }
-}
-
 #vs {
   margin-left: 3rem;
 }
 
-.theForm p > p {
-  margin-bottom: 0.3rem;
-}
-
-.formInputSubmit input[type='submit'] {
+.formSubmit input[type='submit'] {
   cursor: pointer;
   border-radius: 0.3rem;
   border: none;
   font-size: 1rem;
   padding: 0.5rem;
   margin: 0.5rem 0;
-}
-
-// .erasOptions {
-//   h2 {
-//     font-size: 1.8rem;
-//     margin-bottom: 1rem;
-//   }
-// }
-
-.eras {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
-}
-
-.eras header {
-  color: white;
-}
-
-.eras h1 {
-  text-align: center;
-  padding: 1rem;
-  font-size: 3rem;
 }
