--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -14,6 +14,37 @@ html {
   font-style: normal;
 }
 
+header .avatar {
+  margin: 0 1rem -50%;
+  // background-image: url('./images/square.svg');
+  height: 64px;
+  width: 64px;
+  padding: 0.4rem;
+}
+
+header nav {
+  display: flex;
+  align-items: center;
+}
+
+header nav > * {
+  margin: 0 1rem;
+}
+
+header nav a {
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  text-decoration: none;
+}
+
+header ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0.5rem 1rem 0rem 1rem;
+}
+
 body {
   margin: 0;
   min-height: 100%;
