--- a/ClientApp/src/styles/Battle.module.scss
+++ b/ClientApp/src/styles/Battle.module.scss
@@ -93,9 +93,10 @@
   height: 110px;
 }
 
-span {
-  color: black;
-}
+//TARGET THE CLASS THEN SPAN
+// span {
+//   color: black;
+// }
 
 .battleDescription {
   border: solid 0.1rem black;
