--- a/ClientApp/src/styles/Eras.module.scss
+++ b/ClientApp/src/styles/Eras.module.scss
@@ -8,16 +8,6 @@
   background-size: cover;
 }
 
-.eras header {
-  color: white;
-}
-
-.eras h1 {
-  text-align: center;
-  padding: 1rem;
-  font-size: 3rem;
-}
-
 .erasOptions {
   display: flex;
   flex-direction: column;
@@ -38,61 +28,33 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  div {
+    background-size: cover;
+    border: solid silver;
+    margin: 1rem;
+    img {
+      width: 350px;
+      height: 200px;
+    }
+  }
+  div:hover {
+    border: solid #ffe81f;
+  }
 }
 
-.eraOne {
-  background-image: url('https://i.imgur.com/Xp0vjUa.jpg');
-  width: 350px;
-  height: 200px;
-  color: white;
-  cursor: pointer;
-  border: 0;
-  background-size: cover;
-  border: solid silver;
-  margin: 1rem;
-}
-
-.eraTwo {
-  background-image: url('https://milnersblog.files.wordpress.com/2019/04/star-wars-celebration-2019-official-full-mural-poster-hi-res.jpg');
-  width: 350px;
-  height: 200px;
-  color: white;
-  cursor: pointer;
-  border: 0;
-  background-size: cover;
-  border: solid silver;
-  margin: 1rem;
-}
-
-.eraThree {
-  background-image: url('https://www.farfarawaynews.com/wp-content/uploads/2019/04/Celebration-Muraljpg.jpg');
-  width: 350px;
-  height: 200px;
-  color: white;
-  cursor: pointer;
-  border: 0;
-  background-size: cover;
-  border: solid silver;
-  margin: 1rem;
-}
-
-.eraAll {
-  background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/826040f5-466d-4fe5-ad72-dbcdfd174c26/dcmey63-5338ac1d-ac70-4892-b576-4cb5f304e6f7.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvODI2MDQwZjUtNDY2ZC00ZmU1LWFkNzItZGJjZGZkMTc0YzI2XC9kY21leTYzLTUzMzhhYzFkLWFjNzAtNDg5Mi1iNTc2LTRjYjVmMzA0ZTZmNy5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.cdHJ9fCb7-h8YOz9b8DwAsSeDBaXrbxJk1fvII5-YVs');
-  width: 350px;
-  height: 200px;
-  color: white;
-  cursor: pointer;
-  border: 0;
-  background-size: cover;
-  border: solid silver;
-  margin: 1rem;
-}
-
-.eraOne:hover,
-.eraTwo:hover,
-.eraThree:hover,
-.eraAll:hover {
-  border: solid red;
+.erasAllContainer {
+  div {
+    background-size: cover;
+    border: solid silver;
+    margin: 1rem;
+    img {
+      width: 350px;
+      height: 200px;
+    }
+  }
+  div:hover {
+    border: solid #ffe81f;
+  }
 }
 
 .erasAllContainer {
