--- a/ClientApp/src/styles/Header.module.scss
+++ b/ClientApp/src/styles/Header.module.scss
@@ -1,9 +1,48 @@
-header .avatar {
-  margin: 0 1rem;
-  // background-image: url('./images/square.svg');
-  height: 64px;
-  width: 64px;
-  padding: 0.4rem;
+// header .avatar {
+//   margin: 0 1rem;
+//   display: flex;
+//   // background-image: url('./images/square.svg');
+//   height: 64px;
+//   width: 64px;
+//   padding: 0.4rem;
+// }
+
+.headerContainer {
+  // border: solid red;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  padding: 0.6rem 0rem 0rem 0rem;
+  li {
+    border: solid pink;
+  }
+}
+
+.linksContainer {
+  display: flex;
+  // border: solid green;
+  justify-content: end;
+  flex: 1;
+  img {
+    margin-left: 1rem;
+  }
+}
+
+.battleHeaderTest {
+  // border: solid orange;
+}
+
+.theLinks {
+  // border: solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.battlesHeader {
+  color: yellow;
+  font-size: 2rem;
+  text-shadow: 1px 1px 2px black, 0 0 1em #ffe81f, 0 0 0.2em #ffe81f;
 }
 
 header nav {
@@ -23,9 +62,9 @@ header nav a {
   text-decoration: none;
 }
 
-header ul {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0.5rem 1rem 0rem 1rem;
-}
+// header ul {
+//   display: flex;
+//   justify-content: space-between;
+//   list-style: none;
+//   padding: 0.5rem 1rem 0rem 1rem;
+// }
