Fixed issue with alignment of User, Battles, and Comments by dropping database. Added UploadsController and implemented upload feature into CreateBattle page and showed uploaded image on Battle and Battles pages.

--- a/ClientApp/src/styles/CreateBattle.module.scss
+++ b/ClientApp/src/styles/CreateBattle.module.scss
@@ -121,6 +121,11 @@
   margin: 0.5rem 0;
 }
 
+.fileDrop {
+  border: solid black;
+  padding: 3rem;
+}
+
 .error {
   background-color: darkorange;
   color: white;
