--- a/ClientApp/src/styles/CreateBattle.module.scss
+++ b/ClientApp/src/styles/CreateBattle.module.scss
@@ -1,6 +1,7 @@
 .createBattle {
   display: flex;
   flex-direction: column;
+  padding: 0rem 3rem 0rem 3rem;
   min-height: 100vh;
   background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
 }
