--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -14,6 +14,11 @@ html {
   font-style: normal;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 body {
   margin: 0;
   min-height: 100%;
