--- a/ClientApp/src/styles/Battle.module.scss
+++ b/ClientApp/src/styles/Battle.module.scss
@@ -1,15 +1,54 @@
 .erasOptions {
   border: solid silver;
   margin: 2rem 1rem 2rem 1rem;
-  padding: 1rem 3rem 2rem 3rem;
+  padding: 1rem 1rem 2rem 1rem;
   background-color: rgba(69, 177, 240, 0.8);
+
+  nav {
+    display: flex;
+    i {
+      color: black;
+    }
+  }
+}
+
+.erasOptions nav > * + *::before {
+  content: '>';
+  margin: 0rem 0.5rem 0rem 0.5rem;
+
+  font-family: 'Inika', serif;
+}
+
+.erasOptions nav > * + * + *::before {
+  content: '>';
+  margin: 0rem 0.5rem 0rem 0.5rem;
+
+  font-family: 'Inika', serif;
 }
 
 .eras {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0rem 3rem 0rem 3rem;
   background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
+}
+
+.breadCrumbs {
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  background: none;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.breadCrumbsCurrent {
+  text-decoration: none;
+  border: none;
+  background: none;
+  font-size: 1rem;
+  padding: 0;
 }
 
 #commentDateTime {
@@ -23,66 +62,114 @@
   font-size: 3rem;
 }
 
-.firstSection {
+.resultRow {
+  border: solid red;
   display: flex;
-  // border: solid pink;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
+  // padding-top: 0.5rem;
+  // padding-bottom: 0.5rem;
+}
+
+.battleProperty {
+  border: solid green;
+  display: flex;
+  align-items: center;
+  color: black;
+  flex: 1.1;
+}
+
+.battleResult {
+  border: solid purple;
+  flex: 1.5;
+}
+
+.battleResultCombat {
+  border: solid purple;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1.5;
+  flex-direction: row;
 }
 
 .battleInfo {
   display: flex;
   flex-direction: column;
-  // border: solid orange;
+  border: solid orange;
+  padding: 2rem;
+  // min-width: 700px;
+  // width: fit-content;
+  background-color: rgb(22, 69, 97, 0.7);
   color: rgba(255, 255, 255, 0.851);
-  // width: 50%;
-  height: 300px;
-  // margin: 1rem;
   flex-wrap: wrap;
   font-size: 1.1rem;
-  justify-content: center;
-  flex: 1;
+  margin-top: 1rem;
+  // margin-left: 7rem;
+  // margin-right: 7rem;
 }
 
-.insideBattleInfo {
-  height: 100%;
-  background-color: rgb(22, 69, 97, 0.7);
-  width: fit-content;
-  padding: 1rem 1rem 1rem 1rem;
+.theSection {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.insideBattleInfo p {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.resultsSide {
+  border: solid yellow;
+  flex: 1.5;
 }
 
-.battleImagesContainer {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  // border: solid purple;
+#comBorder {
+  border-top: solid thin black;
+  margin: 1rem 4.5rem 0rem 0.5rem;
+}
 
+#com1 {
+  color: rgba(0, 0, 255, 0.844);
+  // text-shadow: none;
+}
+
+#com2 {
+  color: rgba(255, 0, 0, 0.838);
+  // text-shadow: none;
+}
+
+.battleDataContainerBackground {
+  background-color: rgba(34, 94, 147, 0.8);
   margin-top: 2rem;
-  margin-bottom: 7rem;
+  padding: 0.4rem;
 }
 
-// .battleImages {
-//   width: 250px;
-//   height: 150px;
-//   background-size: cover;
-//   margin: 0.5rem;
-//   border: solid silver;
-// }
+.battleDataContainer {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 0.9rem;
+  color: rgb(29, 29, 29);
 
-// .newCommentContainer {
-//   border: solid red;
-//   padding: 0;
-//   margin: 0;
-// }
+  div {
+    min-height: 100px;
+    min-width: 160px;
+    border-left: solid 0.05rem rgb(45, 45, 45);
+    border-right: solid 0.05rem rgb(45, 45, 45);
+    flex: 1;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    p {
+      color: rgb(221, 221, 221);
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+      padding-bottom: 0.7rem;
+    }
+  }
+}
+
+.theForm {
+  margin-top: 1rem;
+  p {
+    margin-top: 1rem;
+  }
+}
 
 .formInput textarea {
   font-size: 1rem;
@@ -98,42 +185,17 @@
 //   color: black;
 // }
 
-.battleDescription {
-  border: solid 0.1rem black;
-  padding: 1rem;
-}
-
-.battleImagesShell {
-  width: 350px;
-  height: 250px;
-  margin: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  // border: solid red;
-  // height: 300px;
-  width: 350px;
-
-  // flex: 1;
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    border: solid silver;
-    // cursor: pointer;
-  }
-
-  // img:hover {
-  //   border: solid red;
-  // }
-}
+// .battleDescription {
+//   border: solid 0.1rem black;
+//   padding: 1rem;
+// }
 
 .imageDiv {
   display: flex;
   align-items: center;
   justify-content: center;
-  // border: solid red;
   height: 300px;
-  flex: 1;
+  // flex: 4;
 
   img {
     max-width: 100%;
@@ -141,28 +203,6 @@
     border: solid silver;
   }
 }
-
-// .imageDiv {
-//   // border: solid silver;
-//   // display: flex;
-//   // justify-content: center;
-//   // align-items: center;
-//   // overflow: hidden;
-//   width: 300px;
-//   height: 200px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   position: relative;
-//   border: solid red;
-//   overflow: hidden;
-//   img {
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     // width: 100%;
-//   }
-// }
 
 .userImage {
   display: flex;
@@ -193,6 +233,11 @@
     padding: 1rem;
     margin: 1rem 1rem 0rem 1rem;
     cursor: pointer;
+    // background: var(--purple-1);
+
+    border: solid thin black;
+    border-radius: 0.3rem;
+    font-size: 1rem;
   }
 }
 
@@ -207,6 +252,38 @@
   h2 {
     margin: 1rem;
   }
+
+  button {
+    margin-top: 1rem;
+    cursor: pointer;
+    padding: 0.2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+    // background: var(--purple-1);
+
+    border: solid thin black;
+    border-radius: 0.3rem;
+  }
+}
+
+.theCombatantsContainer {
+  display: flex;
+}
+
+.theCombatants {
+  border: solid red;
+  text-align: center;
+}
+
+.deleteAndEditButtons {
+  display: flex;
+  justify-content: center;
+
+  margin: 4rem 0rem 4rem 0rem;
+  button {
+    margin: 1rem;
+    text-decoration: none;
+  }
 }
 
 .commentSection {
@@ -214,14 +291,14 @@
   margin-top: 3rem;
 }
 
-@media screen and (max-width: 800px) {
-  .firstSection {
-    flex-direction: column;
-  }
-}
+// @media screen and (max-width: 800px) {
+//   .firstSection {
+//     flex-direction: column;
+//   }
+// }
 
-@media screen and (max-width: 400px) {
-  .erasOptions {
-    padding: 0.5rem 1.5rem 1rem 1.5rem;
-  }
-}
+// @media screen and (max-width: 400px) {
+//   .erasOptions {
+//     padding: 0.5rem 1.5rem 1rem 1.5rem;
+//   }
+// }
