--- a/ClientApp/src/styles/Eras.module.scss
+++ b/ClientApp/src/styles/Eras.module.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-image: url(../images/JediArchiveLibrary.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  padding: 0rem 3rem 0rem 3rem;
+  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
 }
 
 .erasOptions {
@@ -15,12 +16,13 @@
   align-items: center;
   flex: 1;
   border: solid silver;
-  margin: 2rem;
+  margin: 2rem 1rem 2rem 1rem;
+  padding: 1rem 1rem 2rem 1rem;
   background-color: rgba(69, 177, 240, 0.9);
 }
 
 .erasOptions p {
-  font-size: 1rem;
+  margin-top: 0.4rem;
 }
 
 .erasOptionsContainer {
@@ -30,31 +32,53 @@
   flex-wrap: wrap;
   div {
     background-size: cover;
-    border: solid silver;
     margin: 1rem;
+    transition: transform 0.5s ease;
+    height: 190px;
     img {
-      width: 350px;
-      height: 200px;
+      // width: 325px;
+      // height: 180px;
+      max-width: 100%;
+      max-height: 100%;
+
+      border: solid silver;
+    }
+    p {
+      text-align: center;
     }
   }
   div:hover {
-    border: solid #ffe81f;
+    filter: brightness(100%);
+    transform: scale(1.09);
   }
 }
 
 .erasAllContainer {
+  margin-top: 1rem;
   div {
     background-size: cover;
-    border: solid silver;
     margin: 1rem;
+    transition: transform 0.5s ease;
+    height: 190px;
     img {
-      width: 350px;
-      height: 200px;
+      max-width: 100%;
+      max-height: 100%;
+      // width: 350px;
+      // height: 200px;
+      border: solid silver;
+    }
+    p {
+      text-align: center;
     }
   }
   div:hover {
-    border: solid #ffe81f;
+    filter: brightness(100%);
+    transform: scale(1.09);
   }
+}
+
+.text {
+  position: static;
 }
 
 .erasAllContainer {
