--- a/ClientApp/src/styles/UpdateBattle.module.scss
+++ b/ClientApp/src/styles/UpdateBattle.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0rem 3rem 0rem 3rem;
   background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
 }
 
