--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -24,6 +24,7 @@ body {
   min-height: 100%;
   font-family: 'starwarsfont';
   overflow-x: hidden;
+  // background-image: url(../../images/SpaceBackground.jpg);
 }
 
 @media screen and (max-width: 800px) {
