--- a/ClientApp/src/styles/Battle.module.scss
+++ b/ClientApp/src/styles/Battle.module.scss
@@ -1,4 +1,20 @@
-.erasOptions {
+.battlePage {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 0rem 3rem 0rem 3rem;
+  background-image: url(../images/SpaceBackground.jpg);
+}
+
+.battlePage h1 {
+  text-align: center;
+  padding: 2rem;
+  font-size: 3rem;
+  text-shadow: 1px 0 0 rgb(221, 221, 221), 0 -1px 0 rgb(221, 221, 221),
+    0 1px 0 rgb(221, 221, 221), -1px 0 0 rgb(221, 221, 221);
+}
+
+.battlePageContent {
   border: solid silver;
   margin: 2rem 1rem 2rem 1rem;
   padding: 1rem 1rem 2rem 1rem;
@@ -9,29 +25,25 @@
     i {
       color: black;
     }
+
+    i:hover {
+      color: white;
+    }
   }
 }
 
-.erasOptions nav > * + *::before {
+.battlePageContent nav > * + *::before {
   content: '>';
   margin: 0rem 0.5rem 0rem 0.5rem;
 
   font-family: 'Inika', serif;
 }
 
-.erasOptions nav > * + * + *::before {
+.battlePageContent nav > * + * + *::before {
   content: '>';
   margin: 0rem 0.5rem 0rem 0.5rem;
 
   font-family: 'Inika', serif;
-}
-
-.eras {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  padding: 0rem 3rem 0rem 3rem;
-  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
 }
 
 .breadCrumbs {
@@ -43,6 +55,10 @@
   padding: 0;
 }
 
+.breadCrumbs:hover {
+  color: white;
+}
+
 .breadCrumbsCurrent {
   text-decoration: none;
   border: none;
@@ -51,91 +67,28 @@
   padding: 0;
 }
 
-#commentDateTime {
-  font-size: 1rem;
-  color: rgb(56, 57, 57);
-}
-
-.eras h1 {
-  text-align: center;
-  padding: 2rem;
-  font-size: 3rem;
-}
-
-.resultRow {
-  border: solid red;
-  display: flex;
-  flex-wrap: wrap;
-  // padding-top: 0.5rem;
-  // padding-bottom: 0.5rem;
-}
-
-.battleProperty {
-  border: solid green;
-  display: flex;
-  align-items: center;
-  color: black;
-  flex: 1.1;
-}
-
-.battleResult {
-  border: solid purple;
-  flex: 1.5;
-}
-
-.battleResultCombat {
-  border: solid purple;
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1.5;
-  flex-direction: row;
-}
-
-.battleInfo {
-  display: flex;
-  flex-direction: column;
-  border: solid orange;
-  padding: 2rem;
-  // min-width: 700px;
-  // width: fit-content;
-  background-color: rgb(22, 69, 97, 0.7);
-  color: rgba(255, 255, 255, 0.851);
-  flex-wrap: wrap;
-  font-size: 1.1rem;
-  margin-top: 1rem;
-  // margin-left: 7rem;
-  // margin-right: 7rem;
-}
-
-.theSection {
+.uploadedImageContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.resultsSide {
-  border: solid yellow;
-  flex: 1.5;
-}
+.imageDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
 
-#comBorder {
-  border-top: solid thin black;
-  margin: 1rem 4.5rem 0rem 0.5rem;
-}
-
-#com1 {
-  color: rgba(0, 0, 255, 0.844);
-  // text-shadow: none;
-}
-
-#com2 {
-  color: rgba(255, 0, 0, 0.838);
-  // text-shadow: none;
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    border: solid silver;
+  }
 }
 
 .battleDataContainerBackground {
-  background-color: rgba(34, 94, 147, 0.8);
+  background-color: rgb(198, 198, 198, 0.8);
   margin-top: 2rem;
   padding: 0.4rem;
 }
@@ -164,44 +117,71 @@
   }
 }
 
-.theForm {
-  margin-top: 1rem;
-  p {
+#com1 {
+  color: rgba(0, 0, 255);
+}
+
+#com2 {
+  color: rgba(255, 0, 0);
+}
+
+.descriptionAndCommentsSection {
+  padding: 1rem;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+
+  h2 {
+    margin: 1rem;
+  }
+
+  button {
     margin-top: 1rem;
+    cursor: pointer;
+    padding: 0.2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+    border: solid thin black;
+    border-radius: 0.3rem;
   }
 }
 
-.formInput textarea {
+.battleDescriptionContainer {
+  border: solid 0.4rem rgb(89, 89, 89);
+  background-color: rgb(198, 198, 198, 0.8);
+  padding: 1rem;
+}
+
+#battleDescriptionHeading {
+  font-family: 'starwarsfont';
+  color: rgb(221, 221, 221);
   font-size: 1rem;
-  border: thin solid var(--purple-1);
-  margin-right: 5rem;
-  border-radius: 0.2rem;
-  width: 100%;
-  height: 110px;
+  padding-bottom: 1rem;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
-//TARGET THE CLASS THEN SPAN
-// span {
-//   color: black;
-// }
-
-// .battleDescription {
-//   border: solid 0.1rem black;
-//   padding: 1rem;
-// }
-
-.imageDiv {
+.deleteAndEditButtons {
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 300px;
-  // flex: 4;
+  margin: 4rem 0rem 4rem 0rem;
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    border: solid silver;
+  button {
+    margin: 1rem;
+    text-decoration: none;
+    padding: 0.5rem;
+    border: none;
+    background-color: rgb(198, 198, 198);
   }
+
+  button:hover {
+    background-color: rgb(238, 236, 236);
+  }
+}
+
+.uploadCommentContainer {
+  background-color: rgb(22, 69, 97, 0.8);
+  padding: 1rem;
 }
 
 .userImage {
@@ -216,79 +196,55 @@
   }
 }
 
-.myContainer {
-  background-color: rgb(22, 69, 97, 0.8);
-  padding: 2rem 1rem 2rem 1rem;
+.theForm {
+  margin-top: 1rem;
+
+  p {
+    margin-top: 1rem;
+  }
 }
 
-.myContainerThree {
-  margin-top: 3rem;
+.formInput textarea {
+  font-size: 1rem;
+  border: thin solid var(--purple-1);
+  margin-right: 5rem;
+  border-radius: 0.2rem;
+  width: 100%;
+  height: 110px;
 }
 
-.myContainerTwo {
+.commentSubmitContainer {
   display: flex;
   justify-content: end;
 
   input[type='submit'] {
-    padding: 1rem;
+    padding: 0.6rem;
     margin: 1rem 1rem 0rem 1rem;
     cursor: pointer;
-    // background: var(--purple-1);
-
-    border: solid thin black;
+    border: solid thin rgb(22, 69, 97, 0.8);
+    text-decoration: none;
     border-radius: 0.3rem;
     font-size: 1rem;
+    background-color: rgb(198, 198, 198);
+  }
+
+  input[type='submit']:hover {
+    background-color: rgb(238, 236, 236);
   }
 }
 
-.secondSection {
-  padding: 1rem;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: bold;
-
-  font-size: 1.5rem;
-  margin-top: 2rem;
-
-  h2 {
-    margin: 1rem;
-  }
-
-  button {
-    margin-top: 1rem;
-    cursor: pointer;
-    padding: 0.2rem;
-    font-size: 0.8rem;
-    cursor: pointer;
-    // background: var(--purple-1);
-
-    border: solid thin black;
-    border-radius: 0.3rem;
-  }
-}
-
-.theCombatantsContainer {
-  display: flex;
-}
-
-.theCombatants {
-  border: solid red;
-  text-align: center;
-}
-
-.deleteAndEditButtons {
-  display: flex;
-  justify-content: center;
-
-  margin: 4rem 0rem 4rem 0rem;
-  button {
-    margin: 1rem;
-    text-decoration: none;
-  }
-}
-
-.commentSection {
+.commentsContainer {
   border-top: solid 0.1rem black;
   margin-top: 3rem;
+}
+
+.commentsWrapper {
+  margin-top: 3rem;
+}
+
+#commentDateTime {
+  font-size: 1rem;
+  color: rgb(56, 57, 57);
 }
 
 // @media screen and (max-width: 800px) {
