--- a/ClientApp/src/styles/Battles.module.scss
+++ b/ClientApp/src/styles/Battles.module.scss
@@ -1,19 +1,18 @@
-.battles {
+.battlesPage {
   display: flex;
   flex-direction: column;
   padding: 0rem 3rem 0rem 3rem;
   min-height: 100vh;
-  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
+  background-image: url(../images/SpaceBackground.jpg);
 }
 
-.battles h1 {
-  text-align: center;
-  padding: 1rem;
-  font-size: 3rem;
-  color: white;
+.battlesPage nav {
+  i:hover {
+    color: white;
+  }
 }
 
-.battlesOptionsBackground {
+.battlesPageContent {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,21 +24,20 @@
   background-color: rgba(69, 177, 240, 0.8);
 }
 
-.blah {
-  // border: solid green;
-  display: flex;
-  width: 100%;
-  padding-left: 2rem;
-}
-
-.battlesOptionsBackground {
+.battlesPageContent {
   h2 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
   }
 }
 
-.searchWrapper {
+.navContainer {
+  display: flex;
+  width: 100%;
+  padding-left: 2rem;
+}
+
+.searchContainer {
   width: 370px;
 }
 
@@ -64,7 +62,7 @@
   color: #00b4cc;
 }
 
-.searchButton {
+.searchGoButton {
   width: 40px;
   height: 36px;
   border: 1px solid #00b4cc;
@@ -94,19 +92,24 @@
   }
 }
 
-.battleOptionsContainer {
+.battlesOptionsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+
   p {
     text-align: center;
   }
-  link {
-    text-decoration: none;
-    color: red;
-    border: none;
-  }
+}
+
+.createBattleContainer {
+  transition: transform 0.5s ease;
+}
+
+.createBattleContainer:hover {
+  filter: brightness(100%);
+  transform: scale(1.09);
 }
 
 .createBattle {
@@ -124,7 +127,7 @@
   border: solid black;
 }
 
-.addButton {
+.createPlusSymbol {
   position: relative;
   border-width: 2px;
   border-style: solid;
@@ -152,6 +155,13 @@
 
   p {
     color: black;
+    text-shadow: 1px 0 0 rgb(221, 221, 221), 0 -1px 0 rgb(221, 221, 221),
+      0 1px 0 rgb(221, 221, 221), -1px 0 0 rgb(221, 221, 221);
+    font-size: 1.1rem;
+  }
+
+  p + p {
+    font-size: 1rem;
   }
 }
 
