--- a/ClientApp/src/styles/CreateBattle.module.scss
+++ b/ClientApp/src/styles/CreateBattle.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding: 0rem 3rem 0rem 3rem;
   min-height: 100vh;
-  background-image: url('https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg');
+  background-image: url(../images/SpaceBackground.jpg);
 }
 
 .createBattle header {
@@ -29,6 +29,10 @@
     i {
       margin-right: 0.5rem;
       color: black;
+    }
+
+    i:hover {
+      color: white;
     }
   }
 }
@@ -84,7 +88,8 @@
     margin-top: 1rem;
   }
   button {
-    width: 100px;
+    width: 60px;
+
     cursor: pointer;
   }
 }
@@ -102,14 +107,29 @@
   font-size: 0.9rem;
 }
 
-.theAddedCombatant {
+.theAddedCombatant1 {
   border: solid grey;
+  border-radius: 0.3rem;
   padding: 0.2rem;
-  background-color: pink;
+  background-color: rgba(0, 0, 255);
   p {
     margin: 0;
-    padding: 0;
-    color: rgb(70, 70, 70);
+    padding-left: 0.1rem;
+    padding-bottom: 0.2rem;
+    color: white;
+  }
+}
+
+.theAddedCombatant2 {
+  border: solid grey;
+  border-radius: 0.3rem;
+  padding: 0.2rem;
+  background-color: rgba(255, 0, 0);
+  p {
+    margin: 0;
+    padding-left: 0.1rem;
+    padding-bottom: 0.2rem;
+    color: white;
   }
 }
 
@@ -120,11 +140,26 @@
   font-size: 1rem;
   padding: 0.5rem;
   margin: 0.5rem 0;
+  background-color: rgb(198, 198, 198);
+}
+
+.formSubmit input[type='submit']:hover {
+  background-color: rgb(238, 236, 236);
 }
 
 .fileDrop {
-  border: solid black;
+  border-radius: 0.3rem;
+  background-color: white;
   padding: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.droppedImage {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
 .error {
