--- a/ClientApp/src/styles/SignUp.module.scss
+++ b/ClientApp/src/styles/SignUp.module.scss
@@ -1,33 +1,34 @@
 .jediArchivesIntro {
   min-height: 100vh;
   min-height: 100vh;
-  background-image: url(../images/JediArchiveLibrary.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  padding: 0rem 3rem 0rem 3rem;
+  background-image: url(../images/SpaceBackground.jpg);
+
+  p {
+    color: black;
+  }
 }
 
 .archiveContainer {
-  border: solid green;
   display: flex;
   justify-content: center;
-  padding: 1rem;
+  padding-top: 2rem;
 }
 
 .battlesButton {
-  animation: glow 2s infinite alternate;
-  border: solid red;
-  background-color: rgb(22, 69, 97);
+  border-radius: 0.3rem;
+  background-color: rgba(69, 177, 240, 0.9);
   margin: 0;
   width: 370px;
   height: 495px;
   color: white;
   font-size: 1rem;
-  padding: 0rem 0.5rem 0rem 0.5rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 
   nav {
     display: flex;
-    i {
+    color: black;
+    i:hover {
       color: white;
     }
   }
@@ -77,38 +78,30 @@
   border-radius: 0.2rem;
 }
 
-// button,
-// input[type='submit'] {
-//   cursor: pointer;
-//   background: var(--purple-1);
-//   font-family: Inika, serif;
-//   color: white;
-//   border: none;
-//   font-size: 1.2rem;
-//   padding: 0.5rem;
-//   margin: 0.5rem 0;
-// }
-
-// button.small {
-//   font-size: 0.8rem;
-//   padding: 0.2rem;
-// }
-
-.formInput button:hover,
-input[type='submit']:hover {
-  background: var(--purple-0);
+.jediArchivesIntro input[type='submit'] {
+  cursor: pointer;
+  border-radius: 0.3rem;
+  border: none;
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  background-color: rgb(198, 198, 198);
 }
 
-.formInput button:active,
-input[type='submit']:active {
-  background: var(--purple-2);
+.jediArchivesIntro input[type='submit']:hover {
+  background-color: rgb(238, 236, 236);
 }
 
-@keyframes glow {
-  from {
-    box-shadow: 0 0 10px -10px rgb(0, 195, 255);
-  }
-  to {
-    box-shadow: 0 0 10px 10px rgb(0, 195, 255);
-  }
+#uploadedImage {
+  text-align: center;
+}
+
+.fileDropZone {
+  padding: 1rem;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  background-color: white;
+  border-radius: 0.3rem;
+  color: black;
 }
