--- a/ClientApp/src/styles/Battles.module.scss
+++ b/ClientApp/src/styles/Battles.module.scss
@@ -169,3 +169,12 @@
   filter: brightness(100%);
   transform: scale(1.09);
 }
+
+@media screen and (max-width: 500px) {
+  .battlesPage {
+    padding: 0;
+  }
+  .searchContainer {
+    width: 270px;
+  }
+}
