--- a/ClientApp/src/styles/Header.module.scss
+++ b/ClientApp/src/styles/Header.module.scss
@@ -1,14 +1,4 @@
-// header .avatar {
-//   margin: 0 1rem;
-//   display: flex;
-//   // background-image: url('./images/square.svg');
-//   height: 64px;
-//   width: 64px;
-//   padding: 0.4rem;
-// }
-
 .headerContainer {
-  // border: solid red;
   height: 5rem;
   display: flex;
   align-items: center;
@@ -20,8 +10,7 @@
 
 .linksContainer {
   display: flex;
-  // border: solid green;
-  justify-content: end;
+  justify-content: flex-end;
   flex: 1;
   img {
     margin-left: 1rem;
@@ -29,7 +18,6 @@
 }
 
 .theLinks {
-  // border: solid blue;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -65,10 +53,3 @@ header nav a {
   padding: 0.5rem;
   text-decoration: none;
 }
-
-// header ul {
-//   display: flex;
-//   justify-content: space-between;
-//   list-style: none;
-//   padding: 0.5rem 1rem 0rem 1rem;
-// }
