--- a/ClientApp/src/styles/Battle.module.scss
+++ b/ClientApp/src/styles/Battle.module.scss
@@ -78,7 +78,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  // height: 300px;
+  height: 300px;
 
   img {
     max-width: 100%;
@@ -126,14 +126,14 @@
 }
 
 .descriptionAndCommentsSection {
-  padding: 1rem;
+  // padding: 1rem;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
   margin-top: 2rem;
 
   h2 {
-    margin: 1rem;
+    margin: 1rem 1rem 1rem 0rem;
   }
 
   button {
@@ -148,7 +148,7 @@
 }
 
 .battleDescriptionContainer {
-  border: solid 0.4rem rgb(89, 89, 89);
+  border: solid 0.1rem rgb(89, 89, 89);
   background-color: rgb(198, 198, 198, 0.8);
   padding: 1rem;
 }
@@ -182,6 +182,7 @@
 .uploadCommentContainer {
   background-color: rgb(22, 69, 97, 0.8);
   padding: 1rem;
+  // margin: 1rem;
 }
 
 .userImage {
@@ -236,6 +237,7 @@
 .commentsContainer {
   border-top: solid 0.1rem black;
   margin-top: 3rem;
+  // margin: 3rem 1rem 0rem 1rem;
 }
 
 .commentsWrapper {
@@ -253,8 +255,27 @@
   }
 }
 
-// @media screen and (max-width: 500px) {
-//   .battleImageDiv {
-//     height: 0;
-//   }
-// }
+@media screen and (max-width: 680px) {
+  .imageDiv {
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 1255px) {
+  .battleDataContainer {
+    border: solid thin black;
+    div {
+      border-top: solid 0.05rem rgb(45, 45, 45);
+      border-bottom: solid 0.05rem rgb(45, 45, 45);
+    }
+  }
+}
+
+@media screen and (max-width: 526px) {
+  .battleDataContainer {
+    div {
+      min-height: 80px;
+      min-width: 140px;
+    }
+  }
+}
