--- a/ClientApp/src/styles/Battles.module.scss
+++ b/ClientApp/src/styles/Battles.module.scss
@@ -26,8 +26,15 @@
 
 .battlesPageContent {
   h2 {
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
+    text-align: center;
+    text-shadow: 1px 0 0 rgb(221, 221, 221), 0 -1px 0 rgb(221, 221, 221),
+      0 1px 0 rgb(221, 221, 221), -1px 0 0 rgb(221, 221, 221);
+  }
+  .date {
+    font-size: 1.5rem;
+    text-align: center;
   }
 }
 
@@ -158,6 +165,9 @@
     text-shadow: 1px 0 0 rgb(221, 221, 221), 0 -1px 0 rgb(221, 221, 221),
       0 1px 0 rgb(221, 221, 221), -1px 0 0 rgb(221, 221, 221);
     font-size: 1.1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   p + p {
