Styled header and removed toLowerCase() method

--- a/ClientApp/src/styles/Header.module.scss
+++ b/ClientApp/src/styles/Header.module.scss
@@ -11,6 +11,10 @@
   text-shadow: 1px 1px 2px black, 0 0 1em #ffe81f, 0 0 0.2em #ffe81f;
 }
 
+.userName {
+  color: #ffe81f;
+}
+
 .linksContainer {
   display: flex;
   justify-content: flex-end;
