--- a/ClientApp/src/styles/Header.module.scss
+++ b/ClientApp/src/styles/Header.module.scss
@@ -21,6 +21,8 @@
   flex: 1;
   img {
     margin-left: 1rem;
+    border: solid 0.15rem white;
+    border-radius: 0.3rem;
   }
 }
 
@@ -28,6 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: center;
 }
 
 .navLink {
