--- a/ClientApp/src/styles/Battles.module.scss
+++ b/ClientApp/src/styles/Battles.module.scss
@@ -165,9 +165,8 @@
     text-shadow: 1px 0 0 rgb(221, 221, 221), 0 -1px 0 rgb(221, 221, 221),
       0 1px 0 rgb(221, 221, 221), -1px 0 0 rgb(221, 221, 221);
     font-size: 1.1rem;
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
   }
 
   p + p {
